
2024-05-14  David Declerck <david.declerck@ocamlpro.com>

	* general for libcob: add missing profiling.c

2023-07-07  Simon Sobisch <simonsobisch@gnu.org>

	* general for cobc: include new replace.c
	* version_cobc.rc: updated date + rev

2023-06-30  Simon Sobisch <simonsobisch@gnu.org>

	* config.h.in: updated for OrangeC 6.0.70.2

2023-05-27  Simon Sobisch <simonsobisch@gnu.org>

	* makedist.cmd: first addition for CI output
	* version_cobc.rc, version_libcob.rc: updated date + rev

2023-01-16  Simon Sobisch <simonsobisch@gnu.org>

	* version_cobc.rc, version_libcob.rc: updated date + rev

2022-12-17  Simon Sobisch <simonsobisch@gnu.org>

	* general for libcob+cobc: handle move of cconv module

2022-10-15  Simon Sobisch <simonsobisch@gnu.org>

	* added statement.def to all cobc and libcob projects,
	  new libversion.h to libcob
	* version_cobc.rc, version_cobcrun.rc, version_libcob.rc,
	  version_gcdiff.rc: use simple version.h instead of full common.h,
	  preventing resource compilers to stumble over C definitions
	* makedist.cmd: cater for new header files

2022-10-01  Simon Sobisch <simonsobisch@gnu.org>

	* general for cobc: include new cconv module;
	  for cobc.vcxproj: add gcos to auxiliary compiler files;
	  for cobc.vcproj: have auxiliary compiler files included

2022-01-03  Simon Sobisch <simonsobisch@gnu.org>

	* general: project files - only include "build_windows" and top_srcdir;
	  for cobc.vcxproj: have auxiliary compiler files included

2021-11-06  Simon Sobisch <simonsobisch@gnu.org>

	* config.h.in: moved references to PACKAGE_defines after the define,
	  fixing dist builds since 2020-10-27
	* makedist.cmd: explicit search for "define PACKAGE_define" which fixes the
	  multiple results

2020-12-04  Simon Sobisch <simonsobisch@gnu.org>

	* gcvars.cmd: minimized search for SDK option
	* makedist.cmd: pass debug option to gcvars.cmd,
	  don't pause within building extras

2020-12-02  Simon Sobisch <simonsobisch@gnu.org>
