@@ -13936,8 +13936,6 @@ codegen_internal (struct cb_program *prog, const int subsequent_call)
 	cb_tree			l;
 	int			i;
 
-	int	comment_gen;
-
 	struct cb_report *rep;
 
 	/* skip prototypes */
@@ -14076,7 +14074,7 @@ codegen_internal (struct cb_program *prog, const int subsequent_call)
 
 	/* Report data fields */
 	if (prog->report_storage) {
-		comment_gen = 0;
+		int comment_gen = 0;
 		for (l = prog->report_list; l; l = CB_CHAIN (l)) {
 			if (!CB_VALUE (l)) {
 				continue;
