@@ -120,12 +120,13 @@ diagnostics_show_caret (FILE *fd, const int line)
 	const int line_start = line > CARET_CONTEXT_LINES ? line - CARET_CONTEXT_LINES : 1;
 	const int line_end = line + CARET_CONTEXT_LINES;
 	const int max_pos = cb_diagnostics_show_line_numbers ? CARET_MAX_COLS - 5 : CARET_MAX_COLS;
-	char buffer[ CARET_MAX_COLS + 1 ];
+	unsigned char buffer[ CARET_MAX_COLS + 1 ];
 	int line_pos = 1;
 	int char_pos = 0;
 	int c = 0;
 	while (c != EOF) {
-		buffer[char_pos] = c = fgetc (fd);;
+		c = fgetc (fd);
+		buffer[char_pos] = c;
 		if (c == '\n' || c == EOF || char_pos == max_pos) {
 			if (line_pos >= line_start) {
 				/* prefix */
@@ -142,8 +143,8 @@ diagnostics_show_caret (FILE *fd, const int line)
 				     || buffer[char_pos] == '\t'
 				     || buffer[char_pos] == '\r'
 				     || buffer[char_pos] == '\n'
-				     || buffer[char_pos] == EOF
-					 || char_pos == max_pos)) {
+				     || buffer[char_pos] == (unsigned char)EOF
+				     || char_pos == max_pos)) {
 					buffer[char_pos--] = 0;
 				}
 				/* print it */
