@@ -1,4 +1,9 @@
 
+2024-05-15  Simon Sobisch <simonsobisch@gnu.org>
+
+	* makedist.cmd: cater for new different library names
+	* version_cobc.rc, version_libcob.rc: updated date + rev
+
 2024-05-14  David Declerck <david.declerck@ocamlpro.com>
 
 	* general for libcob: add missing profiling.c
@@ -328,7 +333,7 @@
 	  version_libcob.rc, version_cobcrun.rc provided by Simon)
 
 
-Copyright 2014-2023 Free Software Foundation, Inc.
+Copyright 2014-2024 Free Software Foundation, Inc.
 
 Copying and distribution of this file, with or without modification, are
 permitted provided the copyright notice and this notice are preserved.
